--- a/norns/src/Norns.AOP.Core/Norns.AOP.Core.csproj
+++ b/norns/src/Norns.AOP.Core/Norns.AOP.Core.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Norns.AOP.Abstraction\Norns.AOP.Abstraction.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Utils\" />
+  </ItemGroup>
+
 </Project>
