--- a/norns/src/Norns.AOP.Core/Norns.AOP.Core.csproj
+++ b/norns/src/Norns.AOP.Core/Norns.AOP.Core.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Norns.AOP.Abstraction\Norns.AOP.Abstraction.csproj" />
+    <ProjectReference Include="..\Norns.Extensions.Reflection\Norns.Extensions.Reflection.csproj" />
   </ItemGroup>
 
   <ItemGroup>
