add codegen project

--- a/norns/test/Norns.Test/Norns.Test.csproj
+++ b/norns/test/Norns.Test/Norns.Test.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Norns.AOP.Codegen\Norns.AOP.Codegen.csproj" />
     <ProjectReference Include="..\..\src\Norns.AOP.Core\Norns.AOP.Core.csproj" />
     <ProjectReference Include="..\..\src\Norns.Extensions.Reflection\Norns.Extensions.Reflection.csproj" />
   </ItemGroup>
