--- a/norns/src/Norns.AOP.Codegen/Norns.AOP.Codegen.csproj
+++ b/norns/src/Norns.AOP.Codegen/Norns.AOP.Codegen.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="2.9.0" />
+  </ItemGroup>
+
 </Project>
