--- a/norns/test/TestFuncToDll/TestFuncToDll.csproj
+++ b/norns/test/TestFuncToDll/TestFuncToDll.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BenchmarkDotNet" Version="0.11.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\src\Norns.Core\Norns.Core.csproj" />
   </ItemGroup>
 
