--- a/norns/test/TestFuncToDll/TestFuncToDll.csproj
+++ b/norns/test/TestFuncToDll/TestFuncToDll.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspectCore.Extensions.DependencyInjection" Version="1.0.1" />
     <PackageReference Include="BenchmarkDotNet" Version="0.11.2" />
   </ItemGroup>
 
