--- a/Norns/test/Norns.Benchmark/Norns.Benchmark.csproj
+++ b/Norns/test/Norns.Benchmark/Norns.Benchmark.csproj
@@ -1,8 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,9 +15,7 @@
     <ProjectReference Include="..\..\src\Norns.DestinyLoom\Norns.DestinyLoom.csproj" />
     <ProjectReference Include="..\..\src\Norns.Fate\Norns.Fate.csproj" />
     <ProjectReference Include="..\..\src\Norns.Inception\Norns.Inception.csproj" />
-    <ProjectReference Include="..\Norns.DestinyLoom.Test\Norns.DestinyLoom.Test\Norns.DestinyLoom.Test.csproj"  
-                      OutputItemType="Analyzer"
-                      ReferenceOutputAssembly="false" />
+    <ProjectReference Include="..\Norns.DestinyLoom.Test\Norns.DestinyLoom.Test\Norns.DestinyLoom.Test.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
   </ItemGroup>
 
 </Project>
