--- a/Norns/src/Norns.Destiny/Norns.Destiny.csproj
+++ b/Norns/src/Norns.Destiny/Norns.Destiny.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -7,9 +7,4 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.6.0" />
   </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="JIT\" />
-  </ItemGroup>
-  
 </Project>
