--- a/Norns/src/Norns.Adapters.DependencyInjection/Norns.Adapters.DependencyInjection.csproj
+++ b/Norns/src/Norns.Adapters.DependencyInjection/Norns.Adapters.DependencyInjection.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Norns.Destiny\Norns.Destiny.csproj" />
     <ProjectReference Include="..\Norns.Fate\Norns.Fate.csproj" />
   </ItemGroup>
 
