--- a/Norns/src/Norns.Destiny/Norns.Destiny.csproj
+++ b/Norns/src/Norns.Destiny/Norns.Destiny.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="JIT\Structure\JitSymbolExtensions.cs~RF329cfe3.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.6.0" />
     <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
   </ItemGroup>
