--- a/test/Norns.DestinyLoom.Test/Norns.DestinyLoom.Test/Norns.DestinyLoom.Test.csproj
+++ b/test/Norns.DestinyLoom.Test/Norns.DestinyLoom.Test/Norns.DestinyLoom.Test.csproj
@@ -15,6 +15,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\Norns.Destiny\Norns.Destiny.csproj" />
+    <ProjectReference Include="..\..\..\src\Norns.Destiny.AOT\Norns.Destiny.AOT.csproj" />
   </ItemGroup>
 </Project>
