--- a/src/Norns.Destiny.AOT/Norns.Destiny.AOT.csproj
+++ b/src/Norns.Destiny.AOT/Norns.Destiny.AOT.csproj
@@ -3,9 +3,13 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-  
+
+  <ItemGroup>
+    <ProjectReference Include="..\Norns.Destiny.Abstraction\Norns.Destiny.Abstraction.csproj" />
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.6.0" />
-    <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
   </ItemGroup>
+  
 </Project>
