--- a/test/Norns.DestinyLoom.Test/Norns.DestinyLoom.Test/Norns.DestinyLoom.Test.csproj
+++ b/test/Norns.DestinyLoom.Test/Norns.DestinyLoom.Test/Norns.DestinyLoom.Test.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.6.0" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.7.0-2.final" PrivateAssets="all" />
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.0.0" PrivateAssets="all" />
   </ItemGroup>
 
