support generic default implement for interface

--- a/src/Norns.Destiny.Abstraction/Norns.Destiny.Abstraction.csproj
+++ b/src/Norns.Destiny.Abstraction/Norns.Destiny.Abstraction.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Structure\ITypeParameterSymbolInfo.cs~RF8cd921.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="System.Collections.Immutable" Version="1.7.1" />
   </ItemGroup>
 
