--- a/test/Norns.Destiny.UT/Norns.Destiny.UT.csproj
+++ b/test/Norns.Destiny.UT/Norns.Destiny.UT.csproj
@@ -28,6 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Norns.Adapters.DependencyInjection\Norns.Adapters.DependencyInjection.csproj" />
     <ProjectReference Include="..\..\src\Norns.Destiny.AOT\Norns.Destiny.AOT.csproj" />
     <ProjectReference Include="..\..\src\Norns.Destiny.JIT\Norns.Destiny.JIT.csproj" />
   </ItemGroup>
