add support jit assemblies from current domain

--- a/src/Norns.Adapters.DependencyInjection/Norns.Adapters.DependencyInjection.csproj
+++ b/src/Norns.Adapters.DependencyInjection/Norns.Adapters.DependencyInjection.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Norns.Destiny.Abstraction\Norns.Destiny.Abstraction.csproj" />
+    <ProjectReference Include="..\Norns.Destiny.JIT\Norns.Destiny.JIT.csproj" />
   </ItemGroup>
 
 </Project>
