--- a/src/Norns.Adapters.DependencyInjection/Norns.Adapters.DependencyInjection.csproj
+++ b/src/Norns.Adapters.DependencyInjection/Norns.Adapters.DependencyInjection.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.0-preview.4.20251.6" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.5" />
   </ItemGroup>
 
   <ItemGroup>
