--- a/test/Norns.Benchmark/Norns.Benchmark.csproj
+++ b/test/Norns.Benchmark/Norns.Benchmark.csproj
@@ -7,12 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BenchmarkDotNet" Version="0.12.1" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\..\src\Norns.Adapters.DependencyInjection\Norns.Adapters.DependencyInjection.csproj" />
-    <ProjectReference Include="..\..\src\Norns.Destiny.JIT\Norns.Destiny.JIT.csproj" />
+    <!--<ProjectReference Include="..\..\src\Norns.Destiny.JIT\Norns.Destiny.JIT.csproj" />-->
     <ProjectReference Include="..\Norns.DestinyLoom.Test\Norns.DestinyLoom.Test\Norns.DestinyLoom.Test.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
   </ItemGroup>
 
