fix proxy default method in interface on class

--- a/src/Norns.Adapters.DependencyInjection/Norns.Adapters.DependencyInjection.csproj
+++ b/src/Norns.Adapters.DependencyInjection/Norns.Adapters.DependencyInjection.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Norns.Destiny.JIT\Norns.Verthandi.csproj" />
+    <ProjectReference Include="..\Norns.Destiny.Verthandi\Norns.Verthandi.csproj" />
   </ItemGroup>
 
 </Project>
