--- a/src/Norns.Adapters.DependencyInjection/Norns.Adapters.DependencyInjection.csproj
+++ b/src/Norns.Adapters.DependencyInjection/Norns.Adapters.DependencyInjection.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.5" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.0" />
   </ItemGroup>
 
   <ItemGroup>
