--- a/test/Norns.Destiny.UT/Norns.Destiny.UT.csproj
+++ b/test/Norns.Destiny.UT/Norns.Destiny.UT.csproj
@@ -28,9 +28,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Norns.Adapters.DependencyInjection\Norns.Adapters.DependencyInjection.csproj" />
-    <ProjectReference Include="..\..\src\Norns.Destiny.Skuld\Norns.Skuld.csproj" />
-    <ProjectReference Include="..\..\src\Norns.Destiny.Verthandi\Norns.Verthandi.csproj" />
+    <ProjectReference Include="..\..\src\Norns.Verthandi.Adapters.DependencyInjection\Norns.Verthandi.Adapters.DependencyInjection.csproj" />
+    <ProjectReference Include="..\..\src\Norns.Skuld\Norns.Skuld.csproj" />
+    <ProjectReference Include="..\..\src\Norns.Verthandi\Norns.Verthandi.csproj" />
     <ProjectReference Include="..\..\src\Norns.Urd\Norns.Urd.csproj" />
   </ItemGroup>
 
