--- a/src/Norns.Verthandi.Adapters.DependencyInjection/Norns.Verthandi.Adapters.DependencyInjection.csproj
+++ b/src/Norns.Verthandi.Adapters.DependencyInjection/Norns.Verthandi.Adapters.DependencyInjection.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Norns.Destiny.Verthandi\Norns.Verthandi.csproj" />
+    <ProjectReference Include="..\Norns.Verthandi\Norns.Verthandi.csproj" />
   </ItemGroup>
 
 </Project>
