--- a/test/Norns.DestinyLoom.Test/Norns.DestinyLoom.Test/Norns.DestinyLoom.Test.csproj
+++ b/test/Norns.DestinyLoom.Test/Norns.DestinyLoom.Test/Norns.DestinyLoom.Test.csproj
@@ -14,6 +14,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\Norns.Destiny.Skuld\Norns.Skuld.csproj" />
+    <ProjectReference Include="..\..\..\src\Norns.Skuld\Norns.Skuld.csproj" />
   </ItemGroup>
 </Project>
