--- a/src/Norns.Urd.Adapters.DependencyInjection/Norns.Urd.Adapters.DependencyInjection.csproj
+++ b/src/Norns.Urd.Adapters.DependencyInjection/Norns.Urd.Adapters.DependencyInjection.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Norns.Urd\Norns.Urd.csproj" />
+    <ProjectReference Include="..\Norns.Urd.old\Norns.Urd.old.csproj" />
   </ItemGroup>
   
 </Project>
